# osmosis-plugin-SRT

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  spec.md
.tools/: run_tests.sh
osmosis_media/: __init__.py  cli.py  models.py  nlp.py  plugin.py  srt_parser.py
osmosis_media/providers/: __init__.py  base.py  subdl.py
tests/: test_nlp.py  test_plugin.py  test_process_srt.py  test_srt_parser.py
